--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,7 @@
 title: Sousa Marques
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  I'm Miguel,
-  a photographer and developer based in Portugal
+  I'm Miguel, a photographer and developer based in Portugal
 twitter_username: username
 github_username: mimarque
 minimal_mistakes_skin: contrast
@@ -49,11 +48,11 @@ include:
 #   - vendor/ruby/
 
 # Plugins (previously gems:)
+# - jekyll-feed
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
-  - jekyll-feed
   - jemoji
   - jekyll-include-cache
 
@@ -89,6 +88,9 @@ footer:
   atom_feed:
     hide: true
 
+feed:
+  disable: true
+  disable_in_development: true
 
 defaults:
   # _posts
